// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQCKTFtRI4Z32R2yK_KA-X6HQtKZJU42FToXx_Gdb-H8kweV"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQDtwuytOKvJdE2jYtk-ZsyDr03OuWAIM_ClxvfBEkQiV1Gb"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQCyCH-FNjczzBO9cJ10kpLhw0wZ0ZE0xF5Mzpm_mbOrm_AM"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQCKTFtRI4Z32R2yK_KA-X6HQtKZJU42FToXx_Gdb-H8kweV",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15377n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCKTFtRI4Z32R2yK_KA-X6HQtKZJU42FToXx_Gdb-H8kweV",
            "to": "kQDtwuytOKvJdE2jYtk-ZsyDr03OuWAIM_ClxvfBEkQiV1Gb",
            "type": "internal",
            "value": 9970490000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCKTFtRI4Z32R2yK_KA-X6HQtKZJU42FToXx_Gdb-H8kweV",
          "to": "kQDtwuytOKvJdE2jYtk-ZsyDr03OuWAIM_ClxvfBEkQiV1Gb",
          "type": "internal",
          "value": 9970490000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13898n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDtwuytOKvJdE2jYtk-ZsyDr03OuWAIM_ClxvfBEkQiV1Gb",
            "to": "kQCyCH-FNjczzBO9cJ10kpLhw0wZ0ZE0xF5Mzpm_mbOrm_AM",
            "type": "internal",
            "value": 9946577000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDtwuytOKvJdE2jYtk-ZsyDr03OuWAIM_ClxvfBEkQiV1Gb",
          "to": "kQCyCH-FNjczzBO9cJ10kpLhw0wZ0ZE0xF5Mzpm_mbOrm_AM",
          "type": "internal",
          "value": 9946577000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13826n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCyCH-FNjczzBO9cJ10kpLhw0wZ0ZE0xF5Mzpm_mbOrm_AM",
            "to": "kQCyCH-FNjczzBO9cJ10kpLhw0wZ0ZE0xF5Mzpm_mbOrm_AM",
            "type": "internal",
            "value": 9922924000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCyCH-FNjczzBO9cJ10kpLhw0wZ0ZE0xF5Mzpm_mbOrm_AM",
          "to": "kQCyCH-FNjczzBO9cJ10kpLhw0wZ0ZE0xF5Mzpm_mbOrm_AM",
          "type": "internal",
          "value": 9922924000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4378n,
      },
    ],
  },
]
`;
